--- a/templates/dotdeb.list.erb
+++ b/templates/dotdeb.list.erb
@@ -5,16 +5,17 @@
     deb http://packages.dotdeb.org squeeze all
     deb-src http://packages.dotdeb.org squeeze all
 
+    <% if $dotdeb::squeeze_php54 %>
+    deb http://packages.dotdeb.org squeeze-php54 all
+    deb-src http://packages.dotdeb.org squeeze-php54 all
+    <% end %>
+
     <% when 'wheezy' %>
-    deb http://packages.dotdeb.org stable all
-    deb-src http://packages.dotdeb.org stable all
+    deb http://packages.dotdeb.org wheezy all
+    deb-src http://packages.dotdeb.org wheezy all
 
-    <% when 'lenny' %>
-    deb http://packages.dotdeb.org oldstable all
-    deb-src http://packages.dotdeb.org oldstable all
-
-    <% if $dotdeb::lenny_php53 %>
-    deb http://php53.dotdeb.org oldstable all
-    deb-src http://php53.dotdeb.org oldstable all
+    <% if $dotdeb::wheezy_php55 %>
+    deb http://packages.dotdeb.org wheezy-php55 all
+    deb-src http://packages.dotdeb.org wheezy-php55 all
     <% end %>
 <% end %>
