--- a/templates/dotdeb.list.erb
+++ b/templates/dotdeb.list.erb
@@ -1,6 +1,6 @@
 # File is managed by Puppet
 
-<% case lsbdistcodename
+<% case @lsbdistcodename
     when 'squeeze' %>
     deb http://packages.dotdeb.org squeeze all
     deb-src http://packages.dotdeb.org squeeze all
